# Ecole42Paris_KFS

./: .gitignore  Cargo.toml  Makefile  README.md  a  grub.cfg  i386-unknown-none.json  kfs  log.txt  rust-toolchain
.github/workflows/: rust.yml
arch-i386/: i386-unknown-none.json
ld-scripts/: x86.ld
scripts/debug/: debug.gdb
scripts/ld/: x86.ld
src/: main.rs  vga_buffer.rs
src/include/: asm_utile.rs  gdt.rs  idt.rs  interrupts.rs  mod.rs  multiboot.rs  panic.rs  pic.rs  string.rs  symbols.rs
src/io/: hexdump.rs  keyboard.rs  mod.rs  println.rs  shell.rs  vga_buffer.rs
src/keyboard/: keyboard.rs  keymap.rs  mod.rs
src/memory/: dynamicmemory.rs  heap_test.rs  mod.rs  paging.rs  physicalmemory.rs  virtualmemory.rs
src/shell/: mod.rs  shell.rs
