[package]
name = "KFS"
version = "0.1.0"
authors = ["Ychun, Schaehun"]
edition = "2021"

[dependencies]
spin = "0.9.8"
volatile = "0.2.6"
spin = "0.9.8"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true
